--- a/index.html
+++ b/index.html
@@ -1,35 +1,55 @@
-<html>
-    <head>
-        <title>Olá, tudo bem? :)</title>
-    </head>
-    <body>
-        <h1>Eu sou o titulo 1</h1>
-        <h2>E eu sou o titulo 2</h2>
-        <hr>
-        <ol>
-            <h3>Frutas:</h3>
-            <li>
-                Pêra
-            </li>
-            <li>
-                Banana
-            </li>
-            <li>
-                Melancia
-            </li>
-        </ol>
-        <hr>
-        <h3>Marcas de Carros:</h3>
-        <ul>
-            <li>
-                Fiat
-            </li>
-            <li>
-                Renault
-            </li>
-            <li>
-                Ford
-            </li>
-        </ul>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kaylane Brito CV</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <main class="resume-contents">
+        <section class="left-section">
+            <section class="left-section-content">
+                <div class="profile">
+                    <img class="profile-image" src="img/profile-image.jpg" alt="profile image">
+                    <p class="name">Kaylane Brito</p>
+                    <p class="profission">Software Engineer</p>
+                    <div class="contact-info">
+                        <p class="left-title">Contato</p>
+                        <ul>
+                            <li><i class="fa fa-phone"></i>(81) 12345-6789</li>
+                            <li><i class="fa fa-envelope"></i>kaylanecbrito@gmail.com</li>
+                            <li><i class="fa fa-github"></i>https://github.com/kaylanebrito</li>
+                        </ul>
+                    </div>
+                    <div class="skills">
+                        <p class="left-title">Skills</p>
+                        <ul>
+                            <li>
+                                <p>HTML, CSS, Javascript, Git & Github</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+        </section>
+            <section class="right-section">
+                <div class="right-section-contents">
+                    <section class="about gap">
+                        <div class="right-title">About me</div>
+                        <p class="about-me-contents">
+                            Olá, sou a Kaylane.<br>
+                            <br> Um pouco mais sobre o que faço
+                            <br> Quais são minhas competencias
+                        </p>
+                    </section>
+                </div>
+            </section>
+
+        </section>
+    </main>
+
+    
+</body>
 </html>
