--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="profile">
                     <img class="profile-image" src="img/profile-image.jpg" alt="profile image">
                     <p class="name">Kaylane Brito</p>
-                    <p class="profission">Software Engineer</p>
+                    <p class="profession">Software Engineer</p>
                     <div class="contact-info">
                         <p class="left-title">Contato</p>
                         <ul>
@@ -45,11 +45,32 @@
                         </p>
                     </section>
                 </div>
+                <div>
+                    <section class="experience gap">
+                        <div class="right-title">Experience</div>
+                        <div class="experience-contents">
+                            <div class="exp-left">
+                                <p class="exp-company-name">Empresa 01</p>
+                                <p class="exp-time-period">2021 - present</p>
+                            </div>
+                            <div class="exp-right">
+                                <p class="exp-position">Software Engineer</p>
+                                <p class="exp-description">Principais atividades da empresa 01</p>
+                            </div>
+                            <div class="exp-left">
+                                <p class="exp-company-name">Empresa 02</p>
+                                <p class="exp-time-period">2017 - 2020</p>
+                            </div>
+                            <div class="exp-right">
+                                <p class="exp-position">Software Engineer</p>
+                                <p class="exp-description">Principais atividades da empresa 02</p>
+                            </div>
+                        </div>
+                    </section>
+                </div>
             </section>
 
-        </section>
     </main>
 
-    
 </body>
 </html>
