--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Kaylane Brito CV</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <main class="resume-contents">
         <section class="left-section">
@@ -34,43 +36,56 @@
                 </div>
             </section>
         </section>
-            <section class="right-section">
-                <div class="right-section-contents">
-                    <section class="about gap">
-                        <div class="right-title">About me</div>
-                        <p class="about-me-contents">
-                            Olá, sou a Kaylane.<br>
-                            <br> Um pouco mais sobre o que faço
-                            <br> Quais são minhas competencias
-                        </p>
-                    </section>
-                </div>
-                <div>
-                    <section class="experience gap">
-                        <div class="right-title">Experience</div>
-                        <div class="experience-contents">
-                            <div class="exp-left">
-                                <p class="exp-company-name">Empresa 01</p>
-                                <p class="exp-time-period">2021 - present</p>
-                            </div>
-                            <div class="exp-right">
-                                <p class="exp-position">Software Engineer</p>
-                                <p class="exp-description">Principais atividades da empresa 01</p>
-                            </div>
-                            <div class="exp-left">
-                                <p class="exp-company-name">Empresa 02</p>
-                                <p class="exp-time-period">2017 - 2020</p>
-                            </div>
-                            <div class="exp-right">
-                                <p class="exp-position">Software Engineer</p>
-                                <p class="exp-description">Principais atividades da empresa 02</p>
-                            </div>
-                        </div>
-                    </section>
+        <section class="right-section">
+            <div class="right-section-contents">
+                <section class="about gap">
+                    <div class="right-title">About me</div>
+                    <p class="about-me-contents">
+                        Olá, sou a Kaylane.<br>
+                        <br> Um pouco mais sobre o que faço
+                        <br> Quais são minhas competencias
+                    </p>
+                </section>
+            </div>
+            <section class="experience gap">
+                <div class="right-title">Experience</div>
+                <div class="experience-contents">
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 01</p>
+                        <p class="exp-time-period">2021 - 2022</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Software Engineer</p>
+                        <p class="exp-description">Principais atividades da empresa 01</p>
+                    </div>
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 02</p>
+                        <p class="exp-time-period">2017 - 2020</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Software Engineer</p>
+                        <p class="exp-description">Principais atividades da empresa 02</p>
+                    </div>
                 </div>
             </section>
+            <section class="education gap">
+                <div class="right-title">Academic Formation</div>
+                <div class="education-contents">
+                    <div class="education-left">
+                        <p class="education-school-name">UFPE</p>
+                        <p class="education-time-period">2022 - 2026</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Computer Science</p>
+                        <p class="education-desc">Bachelor Degree</p>
+                    </div>
+                </div>
+            </section>
+
+        </section>
 
     </main>
 
 </body>
+
 </html>
