--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kaylane Brito CV</title>
     <link rel="stylesheet" href="style.css">
+
+    <!-- google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap" rel="stylesheet">
+
+    <!-- font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
 </head>
 
 <body>
@@ -81,11 +90,34 @@
                     </div>
                 </div>
             </section>
-
+            <section class="awards gap">
+                <div class="right-title">Awards</div>
+                <div class="awards-contents">
+                    <div class="awards-left">
+                        <p class="awards-company-name">Elastic</p>
+                        <p class="awards-time-period">Junho de 2018</p>
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">Elasticsearch Engineer I & II</p>
+                        <p class="awards-desc">
+                            Curso sobre as principais ferramentas da stack da elastic
+                        </p>
+                    </div>
+                </div>
+                <div class="awards-contents">
+                    <div class="awards-left">
+                        <p class="awards-company-name">Cloud Academy Inc.</p>
+                        <p class="awards-time-period">Novembro de 2021</p>
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">Docker in Depth</p>
+                        <p class="awards-desc">
+                            Curso sobre os principais comandos Docker
+                        </p>
+                    </div>
+                </div>
+            </section>
         </section>
-
     </main>
-
 </body>
-
 </html>
