--- a/index.html
+++ b/index.html
@@ -27,13 +27,17 @@
                     <p class="name">Kaylane Brito</p>
                     <p class="profession">Software Engineer</p>
                     <div class="contact-info">
-                        <p class="left-title">Contato</p>
-                        <ul>
-                            <li><i class="fa fa-phone"></i>(81) 12345-6789</li>
-                            <li><i class="fa fa-envelope"></i>kaylanecbrito@gmail.com</li>
-                            <li><i class="fa fa-github"></i>https://github.com/kaylanebrito</li>
-                        </ul>
-                    </div>
+                        <div class="contact-info">
+                            <p class="left-title">Contato</p>
+                            <ul>
+                                <li><i class="fa fa-phone"></i>+5581 912345678
+                                </li>
+                                <li><i class="fa fa-envelope"></i>kaylanebrito@gmail.com
+                                </li>
+                                <li><i class="fa fa-github"></i>kaylanebrito
+                                </li>
+                            </ul>
+                        </div>
                     <div class="skills">
                         <p class="left-title">Skills</p>
                         <ul>
@@ -55,12 +59,11 @@
                         <br> Quais são minhas competencias
                     </p>
                 </section>
-            </div>
             <section class="experience gap">
                 <div class="right-title">Experience</div>
                 <div class="experience-contents">
                     <div class="exp-left">
-                        <p class="exp-company-name">Empresa 01</p>
+                        <p class="exp-company-name">Bradesco</p>
                         <p class="exp-time-period">2021 - 2022</p>
                     </div>
                     <div class="exp-right">
@@ -68,7 +71,7 @@
                         <p class="exp-description">Principais atividades da empresa 01</p>
                     </div>
                     <div class="exp-left">
-                        <p class="exp-company-name">Empresa 02</p>
+                        <p class="exp-company-name">Accenture</p>
                         <p class="exp-time-period">2017 - 2020</p>
                     </div>
                     <div class="exp-right">
@@ -91,7 +94,7 @@
                 </div>
             </section>
             <section class="awards gap">
-                <div class="right-title">Awards</div>
+                <div class="right-title">Certificates</div>
                 <div class="awards-contents">
                     <div class="awards-left">
                         <p class="awards-company-name">Elastic</p>
@@ -117,6 +120,7 @@
                     </div>
                 </div>
             </section>
+        </div>
         </section>
     </main>
 </body>
