--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <section class="left-section">
             <section class="left-section-content">
                 <div class="profile">
-                    <img class="profile-image" src="img/profile-image.jpg" alt="profile image">
+                    <img class="profile-image" src="img/scarlet-witch.jpg" alt="profile image">
                     <p class="name">Kaylane Brito</p>
                     <p class="profession">Software Engineer</p>
                     <div class="contact-info">
                         <div class="contact-info">
-                            <p class="left-title">Contato</p>
+                            <p class="left-title">Contats</p>
                             <ul>
                                 <li><i class="fa fa-phone"></i>+5581 912345678
                                 </li>
@@ -54,9 +54,9 @@
                 <section class="about gap">
                     <div class="right-title">About me</div>
                     <p class="about-me-contents">
-                        Olá, sou a Kaylane.<br>
-                        <br> Um pouco mais sobre o que faço
-                        <br> Quais são minhas competencias
+                        Hi, my name is Kaylane :D<br>
+                        <br> I'm 18 years old, I'm a systems development technician
+                        <br> and I want to delve into Front-end!
                     </p>
                 </section>
             <section class="experience gap">
@@ -68,7 +68,7 @@
                     </div>
                     <div class="exp-right">
                         <p class="exp-position">Software Engineer</p>
-                        <p class="exp-description">Principais atividades da empresa 01</p>
+                        <p class="exp-description">Lorem ipsum dolor sit amet.</p>
                     </div>
                     <div class="exp-left">
                         <p class="exp-company-name">Accenture</p>
@@ -76,7 +76,7 @@
                     </div>
                     <div class="exp-right">
                         <p class="exp-position">Software Engineer</p>
-                        <p class="exp-description">Principais atividades da empresa 02</p>
+                        <p class="exp-description">Lorem ipsum dolor sit amet.</p>
                     </div>
                 </div>
             </section>
@@ -98,24 +98,24 @@
                 <div class="awards-contents">
                     <div class="awards-left">
                         <p class="awards-company-name">Elastic</p>
-                        <p class="awards-time-period">Junho de 2018</p>
+                        <p class="awards-time-period">June - 2018</p>
                     </div>
                     <div class="awards-right">
                         <p class="awards-name">Elasticsearch Engineer I & II</p>
                         <p class="awards-desc">
-                            Curso sobre as principais ferramentas da stack da elastic
+                            Course on the main tools of the elastic stack
                         </p>
                     </div>
                 </div>
                 <div class="awards-contents">
                     <div class="awards-left">
                         <p class="awards-company-name">Cloud Academy Inc.</p>
-                        <p class="awards-time-period">Novembro de 2021</p>
+                        <p class="awards-time-period">November - 2021</p>
                     </div>
                     <div class="awards-right">
                         <p class="awards-name">Docker in Depth</p>
                         <p class="awards-desc">
-                            Curso sobre os principais comandos Docker
+                            Course on the main Docker commands
                         </p>
                     </div>
                 </div>
